zfs: fix snapshot dir destruction after introducion of VOP_NEED_INACTIVE

Reported by:	lwhsu
PR:		240221
Sponsored by:	The FreeBSD Foundation